<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chacalculatrice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ecranAccueil_bienvenue">Bienvenue dans la</string>
    <string name="nom_string">quel est votre nom ?</string>
    <string name="validez_string">Validez</string>
    <string name="goVue2_string">Vue 2</string>
    <string name="title_activity_second">Choix du festival</string>
    <string name="vue2_title_string">vue n°2</string>
    <string name="bonjour_string">bonjour</string>
    <string name="govue1_string">vue 1</string>
    <string name="quitterBouton">X</string>
    <string name="continuerBouton">>></string>
    <string name="ecranAccueil_application">Application de saisie des ventes lors des festivals</string>
    <string name="ecranAccueil_version">V 01.0</string>
    <string name="ecranChoixFestival_renseigner">Veuillez choisir un festival et la date des ventes</string>
    <string name="saisieDateFestival">date ?</string>
    <string name="saisieFestival">festival ?</string>
    <string name="EcranAccueil_nomAppli">Chacalculatrice</string>
    <string name="title_activity_saisie_vente">Saisie des ventes</string>
    <string name="le">le</string>
    <string name="a">A</string>
    <string name="total">Montant total :</string>
</resources>
