<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chacal_color"
    tools:context="com.appli.chacalprog.EcranChoixFestival" >

    <Button
        android:id="@+id/festival_continuer_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/continue_button" />

    <TextView
        android:id="@+id/numero_commande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/listeFestival"
        android:layout_alignBottom="@+id/listeFestival"
        android:layout_toLeftOf="@+id/listeFestival" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/listeFestival"
        android:layout_alignBottom="@+id/listeFestival"
        android:layout_toLeftOf="@+id/saisieDateFestival"
        android:layout_marginRight="80dp"
        android:text="@string/a"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saisieDateFestival"
        android:layout_alignBottom="@+id/saisieDateFestival"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/le"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/festival_quitter_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/festival_continuer_id"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/quit_button" />

    <Spinner
        android:id="@+id/listeFestival"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="224dp" />

    <TextView
        android:id="@+id/ecranAccueil_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/festival_quitter_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/ecranChoixFestival_renseigner"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saisieDateFestival"
        android:layout_marginTop="89dp"
        android:layout_toRightOf="@+id/textView2"
        android:src="@drawable/img_1" />

    <TextView
        android:id="@+id/saisieDateFestival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listeFestival"
        android:layout_below="@+id/ecranAccueil_application"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="189dp"
        android:textColor="@color/brown"
        android:background="@drawable/back"
        android:textSize="20sp" />

</RelativeLayout>
