<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
          android:background="@color/chacal_color"
    android:orientation="vertical"
>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="10dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/accueil_quitter_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="1"
                android:background="@drawable/quit_button"
                android:layout_marginRight="10dp"/>


        </GridLayout>
</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
   >

        <TextView
            android:id="@+id/ecranAccueil_bienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecranAccueil_bienvenue"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:gravity="center_horizontal|center_vertical"
            />
</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:id="@+id/Ecran_accueil_bienvenue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EcranAccueil_nomAppli"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:gravity="center_horizontal|center_vertical"/>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">

    <TextView
        android:id="@+id/ecranAccueil_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecranAccueil_application"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"
/>

</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/imgBanniere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/banniere_chacalculatrice"
            android:gravity="center_horizontal|center_vertical"
            />
    </LinearLayout>




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/ecranAccueil_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecranAccueil_version"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/accueil_continuer_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="1"
                android:background="@drawable/continue_button"
                android:layout_marginRight="10dp"/>


        </GridLayout>

    </LinearLayout>




</LinearLayout>
